--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,12 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "overrides": {
+    "react-beautiful-dnd": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
+  },
   "dependencies": {
     "axios": "^1.12.2",
     "react": "^19.1.1",
