--- a/package.json
+++ b/package.json
@@ -1,4 +1,19 @@
 {
+  "name": "pathforge-app",
+  "version": "1.0.0",
+  "description": "PathForge Job Application Tracker",
+  "scripts": {
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "dev:backend": "cd server && node server.js",
+    "dev:frontend": "cd client && npm run dev",
+    "build": "cd client && npm run build",
+    "docker:build": "docker-compose build",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "docker:restart": "docker-compose restart",
+    "install:all": "npm install && cd server && npm install && cd ../client && npm install"
+  },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
@@ -7,5 +22,8 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
     "react-router-dom": "^7.9.3"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
