feat: Integrate frontend and backend for full CRUD functionality

--- a/.dockerignore
+++ b/.dockerignore
@@ -11,3 +11,9 @@ coverage
 .DS_Store
 .vscode
 .idea
+# Exclude server and client node_modules
+server/node_modules
+client/node_modules
+# Exclude database files
+*.db
+server/*.db
