--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,8 +1,12 @@
-# Backend Dockerfile
-FROM node:18-alpine
+# Backend Dockerfile - Using regular Node.js (not Alpine) to avoid SQLite issues
+FROM node:18-slim
 
-# Install dependencies needed for sqlite3 and build tools
-RUN apk add --no-cache python3 make g++ wget
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    wget \
+    python3 \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
 WORKDIR /app
@@ -11,10 +15,10 @@ WORKDIR /app
 COPY server/package*.json ./
 COPY server/.npmrc ./
 
-# Install dependencies and rebuild sqlite3 for Alpine
-RUN npm ci --only=production && npm rebuild sqlite3
+# Install dependencies
+RUN npm ci --only=production
 
-# Copy server source code
+# Copy server source code (node_modules excluded by .dockerignore)
 COPY server/ ./
 
 # Create directory for SQLite database
@@ -23,7 +27,7 @@ RUN mkdir -p /app/data
 # Expose port
 EXPOSE 3000
 
-# Health check (using wget instead of curl for Alpine)
+# Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
   CMD wget --no-verbose --tries=1 --spider http://localhost:3000/health || exit 1
 
