--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
+      - DOCKER=true
       - PORT=3000
       - JWT_SECRET=your_super_secure_jwt_secret_key_change_this_in_production
       - JWT_EXPIRES_IN=7d
@@ -37,8 +38,7 @@ services:
     ports:
       - "80:80"
     depends_on:
-      backend:
-        condition: service_healthy
+      - backend
     restart: unless-stopped
     networks:
       - pathforge-network
