security: Remove sensitive files and improve .gitignore patterns

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -11,6 +11,7 @@ node_modules/
 # Database
 *.sqlite
 *.db
+database.sqlite
 data/
 
 # Logs
@@ -28,24 +29,42 @@ pids
 *.seed
 *.pid.lock
 
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
 # Security
 .nyc_output/
-coverage/
 
-# Docker
-docker-compose.override.yml
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Build output
+dist/
+build/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
-.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
-# Build output
-dist/
-build/
