--- a/client/.gitignore
+++ b/client/.gitignore
@@ -14,10 +14,17 @@ dist-ssr
 
 # Environment variables
 .env
+.env.*
+!.env.*.example
 .env.local
+.env.development
 .env.development.local
-.env.test.local
+.env.production
 .env.production.local
+.env.test.local
+
+# Vite build cache
+.vite/
 
 # Editor directories and files
 .vscode/*
